tests/ui/macros/macro-name-typo.stderr
error: cannot find macro `printlx`
  --> $DIR/macro-name-typo.rs:2:5
   |
LL |     printlx!("oh noes!");
   |     ^^^^^^^
   |     |
   |     not found in this scope
   |     help: a macro with a similar name exists: `println`
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: similarly named macro `println` defined here

error: aborting due to 1 previous error

