tests/ui/macros/macro-name-typo.rs
fn main() {
    printlx!("oh noes!"); //~ ERROR cannot find
}
